# edu-ntnu-inft2503

./: .directory  .gitignore  README.md
assignment_01/: CMakeLists.txt  main1.cpp  main2.cpp  temperature.txt
assignment_02/: CMakeLists.txt  main0201a.cpp  main0201b.cpp  main0202.cpp  main0203.cpp  main0204.cpp  main0205.cpp  main0206.cpp  oppg02.md
assignment_03/: CMakeLists.txt  main_0301.cpp  main_0302.cpp  main_0304.cpp
assignment_03/0303/: commodity.cpp  commodity.hpp
assignment_04/ex_0401_emplace/: CMakeLists.txt  main_0401.cpp
assignment_04_gtkmm/: CMakeLists.txt  main.cpp
assignment_05/: CMakeLists.txt  main_01.cpp  main_02.cpp
assignment_06/ex_0601_chess/: CMakeLists.txt  ChessBoard.cpp  ChessBoard.h  ChessBoardPrint.cpp  ChessBoardPrint.h  main.cpp
assignment_06/ex_0602_web/: CMakeLists.txt  main.cpp
assignment_07/: .directory
assignment_07/exercise_0701/: CMakeLists.txt  fraction.cpp  fraction.hpp  main.cpp  report_0701b.md
assignment_07/exercise_0702/: CMakeLists.txt  main.cpp  set.cpp  set.hpp
assignment_08/: CMakeLists.txt  main_0801.cpp  main_0802.cpp
assignment_09/: CMakeLists.txt  assignment_09.md  main_0901.cpp  main_0902.cpp  main_0903.cpp
assignment_10/: main.cpp
