cmake_minimum_required(VERSION 3.29)
project(assignment_02)

set(CMAKE_CXX_STANDARD 20)

add_executable(assignment_0201A main0201a.cpp)
add_executable(assignment_0201B main0201b.cpp)
add_executable(assignment_0202 main0202.cpp)
add_executable(assignment_0203 main0203.cpp)
add_executable(assignment_0204 main0204.cpp)
add_executable(assignment_0205 main0205.cpp)
add_executable(assignment_0206 main0206.cpp)