cmake_minimum_required(VERSION 3.29)
project(assignment_03)

set(CMAKE_CXX_STANDARD 20)

add_executable(assignment_0301 main_0301.cpp)
add_executable(assignment_0302 main_0302.cpp)
add_executable(assignment_0303
        0303/commodity.cpp
        0303/commodity.hpp
        0303/main_0303.cpp)
add_executable(assignment_0304 main_0304.cpp)